--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dotblue/nette-webimages",
+    "name": "soundake/nette-webimages",
     "description": "On-the-fly generated web images for your Nette app",
     "type": "library",
     "keywords": [
@@ -20,15 +20,15 @@
     ],
     "support": {
         "issues": "https://github.com/dotblue/nette-webimages/issues",
-        "source": "https://github.com/dotblue/nette-webimages"
+        "source": "https://github.com/soundake/nette-webimages"
     },
     "require": {
         "php": ">=5.4",
-        "nette/application": ">=2.2.0,<2.4.0",
-        "nette/di": ">=2.2.0,<2.4.0",
-        "nette/http": ">=2.2.0,<2.4.0",
-        "latte/latte": ">=2.2.0,<2.4.0",
-        "nette/utils": ">=2.2.0,<2.4.0"
+        "nette/application": ">=2.2.0",
+        "nette/di": ">=2.2.0",
+        "nette/http": ">=2.2.0",
+        "latte/latte": ">=2.2.0",
+        "nette/utils": ">=2.2.0"
     },
     "autoload": {
         "classmap": ["src/"]
